# aaxToMp3

./: CMakeLists.txt
doc/: QList.drawio
script/: compile.bat  compile.sh  package.bat  package.sh
src/AudibleConverter/: CMakeLists.txt  ConvertTask.cpp  ConvertTask.h  ConvertWidget.cpp  ConvertWidget.h  MyTabWidget.cpp  Settings.cpp  Settings.h  TaskTable.cpp  TaskTable.h  main.cpp  mainwindow.cpp  mainwindow.h  test.cpp
src/libAudibleConverter/: AudibleConvert.cpp  AudibleConvert.h  AudibleMeta.cpp  AudibleMeta.h  CMakeLists.txt  IAudibleConvert.cpp  IAudibleConvert.h  functions.cpp  functions.h  main.cpp  settings.cpp  settings.h
src/libAudibleConverter/version/: version.h.in  version.rc.in
