
set(LIBAUDIBLECONVERTER libAudibleConverter)
find_package(QT NAMES Qt6 Qt5 COMPONENTS Core REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core REQUIRED)
file(GLOB SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.ui")
set(PROJECT_SOURCES ${SOURCE_FILES})
add_library(${LIBAUDIBLECONVERTER} SHARED ${PROJECT_SOURCES}
)

target_include_directories(${LIBAUDIBLECONVERTER} PUBLIC ${CMAKE_SOURCE_DIR}/sdk/include)
target_link_libraries(${LIBAUDIBLECONVERTER} Qt${QT_VERSION_MAJOR}::Core)


# SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_HOME_DIRECTORY}/build)

message(STATUS "foo include dir: ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}")
SET_TARGET_PROPERTIES(${LIBAUDIBLECONVERTER} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})


add_custom_command(
  TARGET ${LIBAUDIBLECONVERTER} POST_BUILD
  COMMAND xcopy  "\"$(SolutionDir)../sdk/win/bin\"" "\"$(OutDir)\""  /E /Y
  )
  
# set_target_properties(libAudibleConverter PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "$(OutDir)")

